--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ scikit-fuzzy==0.5.0
 # Constraint Satisfaction Problem Solver
 python-constraint==1.4.0
 
+# AI/RAG Integration
+groq==0.11.0
+
 # Web Framework
 streamlit==1.51.0
 
